--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,82 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
-  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.hero {
+  background: url('/img/hero.jpg') no-repeat;
+  width: 100%;
+  height: 75vh;
+  background-position-y: -300px;
+  background-size:     cover; 
+  background-repeat:   no-repeat;
+  background-position: center center;  
+  border-radius: 0px 0px 50px 50px;
+
+}
+
+.hero img {
+  width: 100%;
+  height: 650px;
+  object-fit: cover;
+
+}
+
+
+.cards {
+  background: white;
+  height: 200px;
+  border-radius: 10px;
+}
+
+
+.cards img {
+  border-radius: 10px;
+}
+
+
+.cards h5 {
+  margin:15px;
+  font-size: 15px;
+}
+
+.navBook {
+  width: 95%;
+  background: white;
+  height: 90px;
+  margin: 50px auto;
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+
+}
+
+.heroContent {
+  display: flex;
+  /* background-color: red; */
+  width:100%;
+  justify-content: space-around;
+  height: 90vh;
+  align-items: center;
+  
+  
+
+}
+
+.heroContent h1 {
+  color: white;
+  margin-left:90px;
+  font-size: 70px;
+}
+
+
+.containerBook {
+  background: linear-gradient(90deg, #53A1D0, #97C7D5);
+  width: 95%;
+  height: 200px;
+  border-radius: 50px;
+  margin: auto;
+  
 }
