--- a/styles/food.module.css
+++ b/styles/food.module.css
@@ -1,10 +1,12 @@
 .hero {
-    background: url('/img/heroFood.jpg') no-repeat;
+    background: url('/img/heroFood.jpg') no-repeat center center fixed;
     width: 100%;
     height: 75vh;
     background-position-y: -200px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-repeat: no-repeat;
     border-radius: 0px 0px 50px 50px;
 }
 
@@ -18,7 +20,8 @@
     width:90%;
     background: white;
     position: absolute;
-    top:600px;
+    bottom: 0px;
+   
     height: 215px;
     border-radius: 20px;
     box-shadow:
@@ -70,10 +73,9 @@
     display: flex;
     /* background-color: red; */
     width: 100%;
+    position: relative;
     justify-content: space-around;
     height: 90vh;
-    align-items: center;
-
 
 
 }
