--- a/styles/transaction.module.css
+++ b/styles/transaction.module.css
@@ -25,8 +25,9 @@
 .containerBook {
     background-color: white;
     width: 95%;
-    height: 700px;
+    
     border-radius: 50px;
+    padding:50px;
     margin-top: -20%;
     margin-left: auto;
     margin-right: auto;
@@ -43,7 +44,7 @@
 .containerBook2 {
     background-color: white;
     width: 95%;
-    height: 700px;
+    padding:50px;
     border-radius: 50px;
     margin-top: 5%;
     margin-bottom: 5%;
