--- a/styles/hotel.module.css
+++ b/styles/hotel.module.css
@@ -17,24 +17,24 @@
 }
 
 .heroSection {
-    width:90%;
+    width: 90%;
     background: white;
     position: absolute;
     bottom: 0px;
     height: 215px;
     border-radius: 20px;
     box-shadow:
-    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-    0 12.5px 10px rgba(0, 0, 0, 0.06),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-    0 100px 80px rgba(0, 0, 0, 0.12);
+        0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+        0 12.5px 10px rgba(0, 0, 0, 0.06),
+        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
 .cards {
     background: white;
-    padding:5px;
+    padding: 5px;
     width: 350px;
     border-radius: 10px;
 }
@@ -92,7 +92,7 @@
 
 .inputBookForm {
     display: flex;
-    gap:20px;
+    gap: 20px;
     align-items: center;
     justify-content: space-around;
 }
@@ -114,3 +114,21 @@
 
 }
 
+
+
+@media only screen and (max-width: 1000px) {
+    .heroSection form {
+        flex-direction: column;
+    }
+    .heroSection {
+        height: unset;
+        padding: 30px;
+    }
+    .checkInOut {
+        flex-direction: column;
+    }
+    .checks {
+        margin-top: 50px;
+        margin-bottom: 10px;
+    }
+}
